# CloudVisualizer

./: CMakeLists.txt  glad.c
GLFW/: glfw3.lib
headers/: ButtonHandler.h  ImGuiManager.h  IndexBuffer.h  MessageParser.h  OctoTree.h  OpenGLWindow.h  QuadTree.h  Shader.h  UDPSocket.h  VertexBuffer.h  VertexBufferLayout.h  Vertexarray.h  coordFrame.h  gridTreeDetector.h
headers/ImGui/: imgui_impl_opengl3.cpp
headers/glad/: glad.h
shaders/: coord.glsl  point.glsl  tree.glsl
src/: IndexBuffer.cpp  MessageParser.cpp  OctoTree.cpp  OpenGLWindow.cpp  QuadTree.cpp  Shader.cpp  UDPSocket.cpp  VertexBuffer.cpp  Vertexarray.cpp  coordFrame.cpp  gridTreeDetector.cpp  main.cpp
src/Linux/: UDPSocket_Ubuntu.cpp
win32/: UDPSocket_Win.cpp
